# orbiter

./: CMakeLists.txt
.github/: CODEOWNERS
.github/workflows/: build.yml  codeql.yml  on-push-linux.yml  release.yml
Orbitersdk/include/: DlgCtrl.h
Src/DlgCtrl/: DlgCtrl.cpp
Src/Orbiter/: Base.cpp  Baseobj.cpp  CMakeLists.txt  Camera.cpp  Launchpad.cpp  Launchpad.h  Log.cpp  LpadTab.cpp  LpadTab.h  Mesh.cpp  Orbiter.cpp  Orbiter.rc  OrbiterAPI.cpp  PlaybackEd.cpp  TabAbout.h  TabNetwork.cpp  TabNetwork.h  Vecmat.h  Vessel.cpp  Vessel.h  cmdline.cpp  console_ng.cpp  resource.h
Src/Orbiter_ng/: Orbiter_ng.cpp
Src/Orbitersdk/: Orbitersdk.cpp
Tests/: CMakeLists.txt  README.md
Tests/LuaInterpreterTest/: CMakeLists.txt  tests.cc
Utils/Date/: Date.cpp  DateDlg.cpp  StdAfx.cpp
Utils/Pltex/: Pltex.cpp
Utils/Shipedit/: Shipedit.cpp  ShipeditDlg.cpp  StdAfx.cpp  TransformDlg.cpp
Utils/Versionstr/: Versionstr.cpp
Utils/meshc/: Mesh.cpp  meshc.cpp
Utils/scramble/: scramble.cpp
Utils/texpack/: texpack.cpp
